# music_for_dummies

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/models/: __init__.py  schemas.py
backend/app/routers/: analysis.py  upload.py
backend/app/services/: music_analyzer.py  omr_service.py  pdf_processor.py
backend/app/utils/: music_theory.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: analysis.ts
frontend/src/components/Overlay/: Overlay.css  Overlay.tsx
frontend/src/components/PDFViewer/: PDFViewer.css  PDFViewer.tsx
frontend/src/components/Sidebar/: Sidebar.css  Sidebar.tsx
frontend/src/components/Tooltip/: Tooltip.css  Tooltip.tsx
frontend/src/components/UploadScreen/: UploadScreen.css  UploadScreen.tsx
frontend/src/store/: useStore.ts
frontend/src/types/: music.ts
frontend/src/utils/: mockData.ts
