[project]
name = "music-for-dummies"
version = "0.1.0"
description = "Sheet music analysis and music theory education API"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Daniel Cho"}
]
keywords = ["music", "theory", "sheet-music", "analysis", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Education",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "PyMuPDF>=1.23.8",
    "pdf2image>=1.17.0",
    "Pillow>=10.2.0",
    "music21>=9.1.0",
    "pydantic>=2.5.3",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/DanielJunsangCho/music_for_dummies"
Repository = "https://github.com/DanielJunsangCho/music_for_dummies"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
